fix spacing on schedule

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -14,3 +14,11 @@ html {
   background-size: cover;
   background-position: center;
 }
+
+
+@include media-breakpoint-up(lg) {
+  .list-group-item p {
+  width: 25%;
+}
+}
+
